-----------------------------------------------------------------------
** Ecasound - User-visible changes (NEWS)      (last edited: 290407) **
-----------------------------------------------------------------------

About the version numbers... "vX.Y[.Z][-extraT]" :

  X = major version  - the overall development status
  Y = minor version  - represents a set of planned features (see TODO)
  Z = revision       - small changes to major.minor version (optional)

  extraT             - beta, pre and rc releases that are in 
                       preparation of major releases (optional)

Howto for reading the entries:

  added/removed = a new/removed feature, interfaces, or new 
                  implementation of some feature
  changed       = changed behaviour, modified implementation, APIs, etc
  fixed         = fixed bugs, "features" and other sources of problems
  [foobar]      = tag identifying the author of the change author, see 
	          README for a complete list contributor tags; entries 
		  with no tags are from the main author(s)

-----------------------------------------------------------------------

????2007 (v2.4.6)  -** stable release **-
	- fixed: build errors caused by missing #includes, reported
		 by GCC 4.3
07122006 (v2.4.5)  -** stable release **-
	- added: ability to compile without a readline library (will
	         disable the curses based console user-interface)
	- added: if libsndfile is found and supports flac (sndfile
	         1.0.12 or newer), it will be used as the default
	  	 handler for flac files; use of sndfile makes random 
		 access for flac files possible (for example seeking 
		 in interactive mode)
	- added: section on 'RETURN VALUES' to ecasound(1) man page
	- added: ecasound-iam(1) - added documentation for error 
		 return values for 'run', 'start' and 'cs-connect'
	- added: ECASOUND_LOGFILE and ECASOUND_LOGLEVEL environment
	         variables; see ecasound(1) for documentation