@@ -1,5 +1,5 @@
 -----------------------------------------------------------------------
-** Ecasound - User-visible changes (NEWS)      (last edited: 290407) **
+** Ecasound - User-visible changes (NEWS)      (last edited: 300407) **
 -----------------------------------------------------------------------
 
 About the version numbers... "vX.Y[.Z][-extraT]" :
@@ -24,6 +24,8 @@ Howto for reading the entries:
 -----------------------------------------------------------------------
 
 ????2007 (v2.4.6)  -** stable release **-
+        - changed: license of rubyecasound, the Ruby ECI API 
+                 implementation, has been changed from GPL to LGPL
 	- fixed: build errors caused by missing #includes, reported
 		 by GCC 4.3
 07122006 (v2.4.5)  -** stable release **-
